--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-fastapi==0.95.0
-uvicorn==0.20.0
-aiogram==3.0.0
-pydantic==1.10.12
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+aiogram==3.2.0
+pydantic==2.4.2
