--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-aiogram==3.2.0
-pydantic==2.4.2
+fastapi==0.111.0
+uvicorn[standard]==0.30.0
+aiogram==3.6.0
+aiohttp==3.9.5
