--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-fastapi==0.111.0
+fastapi==0.104.1
 uvicorn[standard]==0.30.0
-aiogram==3.6.0
-aiohttp==3.9.5
+aiogram==2.25.1
+aiohttp==3.8.6
+pydantic==1.10.12
