--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-fastapi==0.110.0
+fastapi==0.104.1
 uvicorn[standard]==0.30.0
-aiogram==3.2.0
-aiohttp==3.9.5
-pydantic==2.7.1
-fpdf2==2.7.9
+aiogram==2.25.1
+aiohttp==3.8.6
+pydantic==1.10.12
+reportlab==3.6.12
