--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-fastapi==0.104.1
-uvicorn[standard]==0.30.0
 aiogram==2.25.1
-aiohttp==3.8.6
-pydantic==1.10.12
-reportlab==3.6.12
+fastapi==0.110.0
+uvicorn==0.29.0
+reportlab==4.2.0
+pydantic<2
