--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ uvicorn==0.29.0
 reportlab==4.2.0
 pydantic<2
 supabase==2.3.5
-httpx==0.27.0
+httpx<0.26
 pillow==10.3.0
 qrcode[pil]==7.4.2
 typing_extensions==4.12.2
