--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,11 @@ uvicorn==0.29.0
 reportlab==4.2.0
 pydantic<2
 
-# Supabase y su compat
-supabase==2.3.5
-httpx<0.26
+# Supabase (nuevo) + httpx que pide
+supabase==2.4.6
+httpx==0.27.0
 
 # PDF plantilla y QR
-pymupdf==1.24.9     # (import fitz)
+pymupdf==1.24.9    # (import fitz)
 qrcode==7.4.2
 pillow==10.4.0
