--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,9 @@ uvicorn==0.29.0
 reportlab==4.2.0
 pydantic<2
 
-# Supabase y compatibilidad
+# Supabase + compat
 supabase==2.4.0
-httpx==0.27.0
+httpx==0.25.2
 
 # PDF plantilla y QR
 pymupdf==1.24.9
