--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,15 @@
 aiogram==2.25.1
 fastapi==0.110.0
 uvicorn==0.29.0
-reportlab==4.2.0
 pydantic<2
 
-# Supabase + compat
-supabase==2.3.5
-httpx==0.25.2   # (o simplemente httpx<0.26)
+# Supabase (conjunto compatible)
+supabase==2.3.1
+gotrue==2.2.0
+httpx==0.25.2
 
-# PDF plantilla y QR
+# PDF/QR
 pymupdf==1.24.9
 qrcode==7.4.2
 pillow==10.4.0
+reportlab==4.2.0
