--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,16 @@ fastapi==0.110.0
 uvicorn==0.29.0
 pydantic<2
 
+# Supabase + deps ALINEADOS
 supabase==2.3.1
+gotrue==2.2.0
 httpx==0.25.2
+postgrest==0.13.2
+realtime==1.0.0
+storage3==0.7.7
+supafunc==0.3.3
 
+# PDF/QR
 pymupdf==1.24.9
 qrcode==7.4.2
 pillow==10.4.0
