--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,10 @@ fastapi==0.110.0
 uvicorn==0.29.0
 pydantic<2
 
-# Supabase + deps ALINEADOS
-supabase==2.3.1
-gotrue==2.2.0
-httpx==0.25.2
+# Supabase stack (alineado con httpx>=0.26)
+supabase==2.4.1
+httpx==0.27.0
+gotrue==2.12.4
 postgrest==0.13.2
 realtime==1.0.0
 storage3==0.7.7
