--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,14 @@
-aiogram==2.25.1
 fastapi==0.110.0
 uvicorn==0.29.0
-pydantic<2
+aiogram==2.25.1
 
-# Supabase stack (alineado con httpx>=0.26)
+# FastAPI usa Pydantic v2
+pydantic==2.7.4
+
+# Supabase (esto ya trae gotrue, postgrest y httpx compatibles)
 supabase==2.4.1
-httpx==0.27.0
-gotrue==2.12.4
-postgrest==0.13.2
-realtime==1.0.0
-storage3==0.7.7
-supafunc==0.3.3
 
-# PDF/QR
-pymupdf==1.24.9
+# PDF + QR
+PyMuPDF==1.24.9
 qrcode==7.4.2
 pillow==10.4.0
