--- a/.yaml
+++ b/.yaml
@@ -2,7 +2,7 @@ services:
   - type: web
     name: bot-permisos
     env: python
-    plan: pro
+    plan: starter
     autoDeploy: true
 
     buildCommand: pip install -r requirements.txt
