--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 fastapi==0.110.0
 uvicorn==0.29.0
 aiogram==2.25.1
-PyMuPDF==1.24.4
+PyMuPDF==1.23.21
 qrcode==7.4.2
 pillow==10.3.0
-supabase==2.6.0
+supabase==1.0.3
 httpx==0.27.0
 python-dotenv==1.0.1
-aiohttp
+aiohttp==3.9.5
