--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
+fastapi==0.100.1
+uvicorn==0.23.2
 python-multipart==0.0.6
-supabase==2.3.0
+supabase==1.0.4
 python-dotenv==1.0.0
 qrcode==7.4.2
 aiogram==2.25.2
