--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-fastapi==0.100.1
-uvicorn==0.23.2
-python-multipart==0.0.6
-supabase==1.0.4
-python-dotenv==1.0.0
+fastapi==0.95.2
+uvicorn==0.20.0
+python-telegram-bot==20.3
+reportlab==4.0.4
 qrcode==7.4.2
-aiogram==2.25.2
+pillow==9.5.0
+requests==2.28.2
+supabase==1.0.3
+python-dotenv==1.0.0
