--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-fastapi==0.95.2
-uvicorn==0.20.0
-python-telegram-bot==20.3
-reportlab==4.0.4
-qrcode==7.4.2
-pillow==9.5.0
-requests==2.28.2
-supabase==1.0.3
-python-dotenv==1.0.0
+fastapi==0.68.0
+uvicorn==0.15.0
+python-telegram-bot==13.15
+reportlab==3.6.0
+qrcode==7.3.1
+Pillow==8.4.0
+requests==2.25.1
+supabase==0.7.1
+python-dotenv==0.19.0
