--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
-fastapi==0.68.0
-uvicorn==0.15.0
+fastapi==0.95.2
+uvicorn==0.22.0
 python-telegram-bot==13.15
 reportlab==3.6.0
-qrcode==7.3.1
-Pillow==8.4.0
-requests==2.25.1
+qrcode==7.4.2
+Pillow==9.5.0
+requests==2.31.0
 supabase==0.7.1
-python-dotenv==0.19.0
-setuptools
-wheel
+python-dotenv==1.0.1
+PyMuPDF==1.23.7
