--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,9 @@ uvicorn==0.22.0
 python-telegram-bot==13.15
 reportlab==3.6.0
 qrcode==7.4.2
-Pillow==9.5.0
+Pillow==9.4.0
 requests==2.31.0
 supabase==0.7.1
 python-dotenv==1.0.1
-pdfplumber==0.10.2
+PyMuPDF==1.23.7
+pdfplumber==0.9.0
