--- a/.yaml
+++ b/.yaml
@@ -1,9 +1,7 @@
-services:
-  - type: web
-    name: Elzombie2
-    runtime: python
-    buildCommand: "pip install -r requirements.txt"
-    startCommand: "uvicorn app:app --host 0.0.0.0 --port 10000"
-    envVars:
-      - key: PYTHON_VERSION
-        value: 3.10
+envVars:
+  - key: PIP_NO_CACHE_DIR
+    value: "false"
+  - key: PIP_DISABLE_PIP_VERSION_CHECK
+    value: "1"
+  - key: PYTHON_VERSION
+    value: 3.10
