--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
+--only-binary=:all:
+Pillow==9.5.0
 fastapi==0.95.2
 uvicorn==0.22.0
 python-telegram-bot==13.15
 reportlab==3.6.0
 qrcode==7.4.2
-Pillow==9.5.0
 requests==2.31.0
 supabase==0.7.1
 python-dotenv==1.0.1
