--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,7 @@
-fastapi==0.95.2
-uvicorn==0.22.0
-python-telegram-bot==13.15
-reportlab==3.6.0
-qrcode==7.4.2
-Pillow==11.3.0
-requests==2.31.0
-supabase==0.7.1
+fastapi==0.110.0
+uvicorn[standard]==0.23.2
+aiogram==2.25.1
+aiohttp==3.9.5
+PyMuPDF==1.24.4
+supabase==2.4.6
 python-dotenv==1.0.1
-aiohttp==3.8.5
