--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-fastapi==0.110.0
-uvicorn[standard]==0.23.2
+fastapi==0.104.1
 aiogram==2.25.1
-aiohttp>=3.8.1,<3.9.0
-PyMuPDF==1.24.4
-supabase==2.4.6
-python-dotenv==1.0.1
+supabase==2.1.0
+PyMuPDF==1.23.8
+uvicorn==0.24.0
+python-multipart==0.0.6
