--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-fastapi==0.104.1
-aiogram==2.25.1
-supabase==2.1.0
+fastapi==0.95.0
+aiogram==2.23.1
+supabase==1.3.0
 PyMuPDF==1.21.1
-uvicorn==0.24.0
-python-multipart==0.0.6
+uvicorn==0.20.0
+python-multipart==0.0.5
+aiohttp==3.8.4
