--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
-fastapi==0.95.0
-aiogram==2.23.1
-supabase==1.0.0
-PyMuPDF==1.21.1
-uvicorn==0.20.0
-python-multipart==0.0.5
-aiohttp==3.8.4
-asyncio
+fastapi
+python-telegram-bot
+supabase
+PyMuPDF
+uvicorn
+python-multipart
